FIX: add .-input-parent to display

--- a/site/templates/twig/code-tables/mar/spm/form.twig
+++ b/site/templates/twig/code-tables/mar/spm/form.twig
@@ -82,7 +82,7 @@
 
 	<div class="form-row mb-3">
 		<div class="col-sm-3">
-			<div class="form-group">
+			<div class="form-group input-parent">
 				<label for="lastsaledate">Last Sales Date</label>
 				{% include 'util/bootstrap/form/date-picker.twig' with {
 						'inputgroup': {
