--- a/site/templates/twig/code-tables/mar/spm/.js.twig
+++ b/site/templates/twig/code-tables/mar/spm/.js.twig
@@ -91,7 +91,12 @@ $(function() {
 		errorClass: "is-invalid",
 		validClass: "is-valid",
 		errorPlacement: function(error, element) {
-			error.insertAfter(element).addClass('invalid-feedback');
+			error.addClass('invalid-feedback');
+			if (element.closest('.input-parent').length == 0) {
+				error.insertAfter(element);
+				return true;
+			}
+			error.appendTo(element.closest('.input-parent'));
 		},
 		rules: {
 			code: {
