--- a/site/templates/twig/code-tables/mar/spm/.js.twig
+++ b/site/templates/twig/code-tables/mar/spm/.js.twig
@@ -162,7 +162,7 @@ $(function() {
 						$('input[name=vendorid]').val('');
 						return '';
 					}
-					return $.trim(value);
+					return value;
 				},
 				remote: {
 					url: '{{ page.jsonApiUrl('map/validate/vendorid/') }}',
@@ -182,7 +182,7 @@ $(function() {
 						$('input[name=groupid]').val('');
 						return '';
 					}
-					return $.trim(value);
+					return value;
 				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mar/validate/spgpm/code/') }}',
@@ -202,7 +202,7 @@ $(function() {
 						$('input[name=userid]').val('');
 						return '';
 					}
-					return $.trim(value);
+					return value;
 				},
 				remote: {
 					url: '{{ page.jsonApiUrl('msa/validate/logm/id/') }}',
