FEAT: add date formatting

--- a/site/templates/twig/user-options/user/form/screens.twig
+++ b/site/templates/twig/user-options/user/form/screens.twig
@@ -82,10 +82,7 @@
 									'name': fieldname,
 									'size': 'sm',
 									'value': value ? value|convertdate : '',
-									'addclasses': [
-										'text-right',
-										'date'
-									]
+									'addclasses': ['date']
 								}
 							}
 						} %}
