--- a/site/templates/twig/code-tables/mar/spm/list-print.twig
+++ b/site/templates/twig/code-tables/mar/spm/list-print.twig
@@ -30,12 +30,25 @@
 	</tr>
 
 	<tr class="bg-dark text-white column-headers">
+		<th class="border-0 pt-1 pb-0"></th>
+		<th class="border-0 pt-1 pb-0">Cycle</th>
+		<th class="border-0 pt-1 pb-0">Last Sale</th>
+		<th class="border-0 pt-1 pb-0 text-center" colspan="3" class="text-center">Sales</th>
+		<th class="border-0 pt-1 pb-0 text-center" colspan="3">Commission Earned</th>
+		<th class="border-0 pt-1 pb-0 text-center" colspan="3">Commission Paid</th>
+	</tr>
+
+	<tr class="bg-dark text-white column-headers">
 		<th class="border-0 pt-1"></th>
-		<th class="border-0 pt-1">Cycle</th>
-		<th class="border-0 pt-1">Last Sale</th>
-		<th class="border-0 pt-1 text-center" colspan="3" class="text-center">Sales</th>
-		<th class="border-0 pt-1 text-center" colspan="3">Commission Earned</th>
-		<th class="border-0 pt-1 text-center" colspan="3">Commission Paid</th>
+		<th class="border-0 pt-1"></th>
+		<th class="border-0 pt-1"></th>
+		{% set fields = ['MTD', 'YTD', 'LTD'] %}
+
+		{% for i in 1..3 %}
+			{% for field in fields %}
+			<th class="border-0 pt-1 text-right" class="text-center">{{ field }}</th>
+			{% endfor %}
+		{% endfor %}
 	</tr>
 {% endblock %}
 
