--- a/site/templates/twig/user-options/list/list.twig
+++ b/site/templates/twig/user-options/list/list.twig
@@ -6,7 +6,7 @@
 			{% block list_header_row %}
 				<div class="row align-items-center">
 					<div class="col-3 col-sm-3">
-						ID
+						User ID
 					</div>
 					<div class="col-5 col-sm-6">
 						Name
