--- a/site/templates/twig/user-options/user/cio/form.twig
+++ b/site/templates/twig/user-options/user/cio/form.twig
@@ -3,15 +3,9 @@
 {% set IWHM = page.wire('modules').get('CodeTables').getCodeTable('min', 'iwhm') %}
 
 {% block header_columns %}
-	<div class="col-sm-2">
-		Screen Option
-	</div>
-	<div class="col-sm-1">
-		Available
-	</div>
-	<div class="col-sm-5 text-center">
-		Date
-	</div>
+	<div class="col-sm-2">Screen Option</div>
+	<div class="col-sm-1">Available</div>
+	<div class="col-sm-5 text-center"></div>
 {% endblock %}
 
 {% block inputs %}
