--- a/site/templates/twig/user-options/user/form.twig
+++ b/site/templates/twig/user-options/user/form.twig
@@ -15,12 +15,8 @@
 		<div class="p-2 bg-dark text-white text-bold">
 			<div class="row">
 				{% block header_columns %}
-					<div class="col-sm-2">
-						Screen
-					</div>
-					<div class="col-sm-3">
-						Available
-					</div>
+					<div class="col-sm-2">Screen</div>
+					<div class="col-sm-3">Available</div>
 				{% endblock %}
 			</div>
 		</div>
