--- a/site/templates/twig/user-options/user/form/screens.twig
+++ b/site/templates/twig/user-options/user/form/screens.twig
@@ -45,8 +45,8 @@
 		{% if manager.fieldAttribute(option, 'date') %}
 			<div class="col-sm-2">
 				<div class="form-row">
-					<div class="col">
-						<label for="days{{ option }}">Days</label>
+					<div class="col text-right">
+						<label for="days{{ option }}">Days Back</label>
 					</div>
 					<div class="col">
 						{% set fieldname = 'days' ~ option %}
@@ -69,7 +69,7 @@
 			</div>
 			<div class="col-sm-3">
 				<div class="form-row">
-					<div class="col-sm-4">
+					<div class="col-sm-4 text-right">
 						<label for="date{{ option }}">Start Date</label>
 					</div>
 					<div class="col-sm-8 input-parent">
