--- a/site/templates/twig/user-options/user/form.twig
+++ b/site/templates/twig/user-options/user/form.twig
@@ -11,7 +11,7 @@
 					{% include 'user-options/user/form/inputs/userid.twig' %}
 				</div>
 				<div class="col-sm-6">
-					<small class="text-muted name">{{ u.user.name }}</small>
+					<p class="form-control-plaintext form-control-sm text-muted name">{{ u.user.name }}</p>
 				</div>
 			</div>
 		</div>
