--- a/site/templates/twig/user-options/list/search-filter.twig
+++ b/site/templates/twig/user-options/list/search-filter.twig
@@ -1,3 +1,4 @@
+{% set values = input.get %}
 <div>
 	<div class="d-flex justify-content-between flex-wrap">
 		{% if input.get.text('q') != '' %}
@@ -25,7 +26,7 @@
 				</div>
 
 				<input class="form-control form-group inline" type="text" name="q" value="{{ values.text('q') }}">
-				<input type="hidden" name="col" value="all">
+				<input type="hidden" name="col" value="{{ values.offsetExists('col') ? values.text('col') : 'all' }}">
 				
 				<span class="input-group-btn">
 					<button class="btn btn-light" type="submit">
