--- a/site/templates/twig/code-tables/min/iwhm/edit/.js.twig
+++ b/site/templates/twig/code-tables/min/iwhm/edit/.js.twig
@@ -11,7 +11,7 @@ $(function() {
 ============================================================= */
 	origForm = formCode.form.serialize();
 
-	$("body").on("click", "a:not(#code-edit-form .form_button, #ajax-modal a, .swal2-modal a, .bootstrap-select a)", function(e) {
+	$("body").on("click", "a:not(#code-form .form_button, #ajax-modal a, .swal2-modal a, .bootstrap-select a, #code-form .delete_button)", function(e) {
 		if (formCode.form.serialize() !== origForm) {
 			e.preventDefault();
 			var a = $(this);
