--- a/site/templates/twig/user-options/user/form/screens.twig
+++ b/site/templates/twig/user-options/user/form/screens.twig
@@ -20,7 +20,9 @@
 				{% set fieldname = 'whse' ~ option %}
 				{% set value = attribute(u, fieldname) %}
 
-				{% include 'user-options/user/form/inputs/whseid.twig' with {'name': fieldname, 'value': value} %}
+				<div class="col-sm-6 px-0">
+					{% include 'user-options/user/form/inputs/whseid.twig' with {'name': fieldname, 'value': value} %}
+				</div>
 				<small class="text-muted name">{{ value ? IWHM.name(value) : '' }}</small>
 			{% endif %}
 		</div>
