FEAT: update column labels

--- a/site/templates/twig/user-options/user/iio/form.twig
+++ b/site/templates/twig/user-options/user/iio/form.twig
@@ -13,10 +13,10 @@
 		Warehouse
 	</div>
 	<div class="col-sm-2">
-		Detail
+		Lot/Serial Detail
 	</div>
-	<div class="col-sm-5 text-center">
-		Date
+	<div class="col-sm-5 text-right text-bold">
+		Whse of '**' = all
 	</div>
 {% endblock %}
 
