--- a/site/templates/twig/user-options/user/form.twig
+++ b/site/templates/twig/user-options/user/form.twig
@@ -15,6 +15,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-sm-7 text-right text-bold">
+			<p class="mb-0 p-1">Whse of '**' = all</p>
+		</div>
 	</div>
 	
 	{% block header %}
