--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -96,6 +96,10 @@ table.table-md td, table.table-md th {
 	margin-bottom: .1rem;
 }
 
+.fs-1-2 {
+	font-size: 120%;
+}
+
 /*==============================================================
 	FUELUX Styles
 ==============================================================*/
