--- a/site/templates/twig/dplus-menu/display.twig
+++ b/site/templates/twig/dplus-menu/display.twig
@@ -1,8 +1,18 @@
-<div class="row">
+<div class="row mb-3">
 	<div class="col-6 col-sm-9">
-		<a href="{{ page.parent.url }}" class="btn btn-primary">
-			{{ page.parent.title }}
-		</a>
+		{% if page.template != 'home' %}
+			{% if page.parent().template == 'dplus-menu' %}
+				<a href="{{ page.parent().url }}" class="btn btn-primary">
+					<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+					Back to {{ page.parent().title }}
+				</a>
+			{% else %}
+				<a href="{{ page.parent().url }}" class="btn btn-primary">
+					<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
+					Back to {{ page.parent().title }}
+				</a>
+			{% endif %}
+		{% endif %}
 	</div>
 	<div class="col-6 col-sm-3">
 		{% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/') } %}
