--- a/site/templates/twig/customers/ci/.new/customer/toolbar.twig
+++ b/site/templates/twig/customers/ci/.new/customer/toolbar.twig
@@ -6,11 +6,13 @@
 	page                    ProcessWire\Page
 	page.custid             Customer ID
 #}
+{% set idCust = config.ci.useRid ? input.get.int('rid') : input.get.string('custID') %}
+
 <nav class="toolbar-sidebar">
 	<ul class="nav">
 		{% for key, data in page.ciPermittedSubfunctions() %}
 			<li>
-				<a href="{{ page.ciSubfunctionUrl(rid, key) }}">
+				<a href="{{ page.ciSubfunctionUrl(idCust, key) }}">
 					{{ data.title ? data.title : key|capitalize }}
 				</a>
 			</li>
