--- a/site/templates/twig/customers/ci/.new/list/list.twig
+++ b/site/templates/twig/customers/ci/.new/list/list.twig
@@ -35,7 +35,7 @@
 			{% for customer in customers %}
 				<tr>
 					<td scope="row">
-						<a href="{{ page.custUrl(customer.rid) }}" class="link text-monospace" data-custid="{{ customer.id }}" data-cust_name="{{ customer.name }}" >
+						<a href="{{ page.custUrl(customer.id) }}" class="link text-monospace" data-custid="{{ customer.id }}" data-cust_name="{{ customer.name }}" >
 							<strong>{{ customer.id|replace({' ': '&nbsp;'})|raw }}</strong>
 						</a>
 					</td>
