--- a/site/templates/twig/customers/ci/.new/sales-history/select-date/form.twig
+++ b/site/templates/twig/customers/ci/.new/sales-history/select-date/form.twig
@@ -1,5 +1,7 @@
+{% set idCust = config.ci.useRid ? input.get.int('rid') : input.get.string('custID') %}
+
 <form action="{{ input.url() }}" method="GET">
-	<input type="hidden" name="rid" value="{{ input.get.int('rid') }}">
+	<input type="hidden" name="{{ config.ci.useRid ? 'rid' : 'custID' }}" value="{{ idCust }}">
 
 	<div class="form-group">
 		<label for="date">Start Date</label>
