--- a/site/templates/twig/code-tables/min/igm/edit/.js.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/.js.twig
@@ -144,6 +144,7 @@ $(function() {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
 		rules: {
+			onkeyup: false,
 			code: {
 				required: true,
 				maxlength: formCode.config.fields.code.maxlength,
@@ -163,6 +164,13 @@ $(function() {
 			},
 			sales: {
 				required: true,
+				normalizer: function(value) {
+					if (value.trim() == '') {
+						formCode.form.find('input[name=sales]').val('');
+						return '';
+					}
+					return value;
+				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mgl/validate/gl-code/') }}',
 					type: "get",
@@ -176,6 +184,13 @@ $(function() {
 			},
 			credit: {
 				required: true,
+				normalizer: function(value) {
+					if (value.trim() == '') {
+						formCode.form.find('input[name=credit]').val('');
+						return '';
+					}
+					return value;
+				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mgl/validate/gl-code/') }}',
 					type: "get",
@@ -189,6 +204,13 @@ $(function() {
 			},
 			cogs: {
 				required: true,
+				normalizer: function(value) {
+					if (value.trim() == '') {
+						formCode.form.find('input[name=cogs]').val('');
+						return '';
+					}
+					return value;
+				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mgl/validate/gl-code/') }}',
 					type: "get",
@@ -202,6 +224,13 @@ $(function() {
 			},
 			inventory: {
 				required: true,
+				normalizer: function(value) {
+					if (value.trim() == '') {
+						formCode.form.find('input[name=inventory]').val('');
+						return '';
+					}
+					return value;
+				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mgl/validate/gl-code/') }}',
 					type: "get",
@@ -215,6 +244,13 @@ $(function() {
 			},
 			dropship: {
 				required: true,
+				normalizer: function(value) {
+					if (value.trim() == '') {
+						formCode.form.find('input[name=dropship]').val('');
+						return '';
+					}
+					return value;
+				},
 				remote: {
 					url: '{{ page.jsonApiUrl('mgl/validate/gl-code/') }}',
 					type: "get",
