FIX: update motorclass

--- a/site/templates/twig/code-tables/mso/mfcm/form.twig
+++ b/site/templates/twig/code-tables/mso/mfcm/form.twig
@@ -28,8 +28,8 @@
 	</div>
 
 	<div class="form-group">
-		<label for="motorclass">Class</label>
-		<input type="text" name="class" class="form-control form-control-sm " maxlength="{{ manager.fieldAttribute('class', 'maxlength') }}" id="motorclass">
+		<label for="class">Class</label>
+		<input type="text" name="class" class="form-control form-control-sm " maxlength="{{ manager.fieldAttribute('class', 'maxlength') }}" id="class">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
