--- a/site/templates/twig/code-tables/mso/mfcm/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/mso/mfcm/js/classes/Inputs.js.twig
@@ -16,6 +16,6 @@ class MfcmInputs {
 		this.description2   = this.form.find('input[name=description2]');
 		this.description3   = this.form.find('input[name=description3]');
 		this.description4   = this.form.find('input[name=description4]');
-		this.class          = this.form.find('select[name=class]');
+		this.class          = this.form.find('input[name=class]');
 	}
 }
